--- a/cp.1
+++ b/cp.1
@@ -19,14 +19,13 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
      イス，デバイスからファイル，およびデバイスからデバイスへのデー
      タ転送も行うことができます．
 
-     第1の形式では source を dest にコピーします．デバイスは，こ
-     の形式でのみ指定可能です．第2の形式では source ... をそれぞ
-     れ元のファイル名のままディレクトリ targetdir の中にコピーし
-     ます．source ... は左から右に順番に処理され，-e オプションが
-     指定されていなければ，もし途中でエラーがあっても処理は最後ま
-     で続行されます．この 2つの形式は最後の引数がディレクトリ（ま
-     たはディレクトリへのシンボリック・リンク）であるかどうかで区
-     別されます．
+     第1の形式では source を dest にコピーします．第2の形式では
+     source ... をそれぞれ元のファイル名のままディレクトリ
+     targetdir の中にコピーします．source ... は左から右に順番に
+     処理され，-e オプションが指定されていなければ，もし途中でエ
+     ラーがあっても処理は最後まで続行されます．この 2つの形式は最
+     後の引数がディレクトリ（またはディレクトリへのシンボリック・
+     リンク）であるかどうかで区別されます．
 
      ‘A:’のようなドライブ名のみの指定は，そのドライブのカレント・
      ディレクトリを意味します．
@@ -236,14 +235,14 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
      ディレクトリの再帰の回数は64回に制限されています．
 
 バージョン
-     2.4
+     2.5
 
 制作・著作
      Copyright(C)1992-93 by 板垣 史彦 (Itagaki Fumihiko)
 
 
 
-2.4                 Last change: 28 Dec 1993     Itagaki Fumihiko
+2.5                 Last change: 03 Apr 1994     Itagaki Fumihiko
 
 
 
