--- a/cp.1
+++ b/cp.1
@@ -10,7 +10,6 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
 
 形式
      cp [ -IRSVadefinprsuvx ] [ -m mode ] [ -- ] source dest
-
      cp [ -BCDILPRSUVadefinprsuvx ] [ -m mode ] [ -- ] source ...
      targetdir
 
@@ -82,55 +81,7 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
 
      cp には 次のオプションがあります．
 
-     -B        ファイルやディレクトリを元の名前のままコピーする場
-               合において，コピー先の名前をMS-DOSのディレクトリに
-               納まるよう調整します．ただし . を 2個以上含む名前
-               や . で始まる名前のファイルやディレクトリはエラー
-               とし，コピーしません．
-
-     -C        ファイルやディレクトリを元の名前のままコピーする場
-               合において，その名前がMS-DOSのディレクトリに納まら
-               ない場合，代わりの名前を問い合わせます．このオプショ
-               ンは -B オプションを覆います．
-
-     -D        ファイルやディレクトリを元の名前のままコピーする場
-               合において，MS-DOSのディレクトリに納まらない名前の
-               ファイルやディレクトリをコピーせず無視します．この
-               オプションは -B オプションと -C オプションを覆いま
-               す．
-
-     -I        ファイルやディレクトリ毎に問い合わせを行います．問
-               い合わせに対して‘y’で始まる行を入力すると通常ど
-               おり処理され，それ以外の入力ではコピーをとりやめて
-               次のファイルやディレクトリの処理に進みます．このオ
-               プションは -i オプションを覆いますが，コピー先に既
-               にファイルがある場合には -i オプションと同じ処理が
-               行われます．
-
-     -L        ファイルやディレクトリを元の名前のままコピーする場
-               合において，小文字を含む名前のファイルやディレクト
-               リをコピーしません．
-
-     -P        たとえば cp -P a/b/c /d/e/f G:/h/i/j dir では，
-               a/b/c を dir/a/b/c に，/d/e/f を dir/d/e/f に，
-               G:/h/i/j を dir/h/i/j にコピーします．dir は存在す
-               るディレクトリでなければなりません（このオプション
-               は第2の形式でのみサポートされます）．パス dir/a/b，
-               dir/d/e，dir/h/i は，存在しなければ作成されます（た
-               だしコピーするファイルが存在していなければ，パスの
-               作成は行われません）．このパスの作成処理は，どのオ
-               プションの影響も受けません．
-
-     -R, -r    ディレクトリを再帰的にコピーします．
-
-     -S        システム・ファイルをコピーしません．
-
-     -U        ファイルやディレクトリを元の名前のままコピーする場
-               合に，コピー先の名前を大文字にします．
-
-     -V        ボリューム・ラベルもコピーします．
-
-     -a        -dpR と同じです．
+     -a        -dpr と同じです．
 
      -d        シンボリック・リンクが参照する実体にアクセスする代
                わりにリンク・ファイルそのものにアクセスします．シ
@@ -159,7 +110,10 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
                れます．
 
      -i        コピー先に同名のファイルが存在している場合，上書き
-               するかどうかを -I オプションと同様に問い合わせます．
+               するかどうかを問い合わせます．問い合わせに対して
+               ‘y’で始まる行を入力するとコピーが行われ，それ以
+               外の入力ではコピーをとりやめて次のファイルやディレ
+               クトリの処理に進みます．
 
                     問い合わせに対して‘y’で始まる行を入力しても，
                上書きが必ず成功するとは限りません．コピー先に存在
@@ -169,15 +123,25 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
                TOOLBOX の cp では，-f オプション と -i オプション
                は互いに打ち消し合うものではありません．
 
-     -n        -v オプションと同じ報告を行いますが，実際にコピー
-               はしません．このオプションを指定すると，-f オプショ
-               ン，-i オプションおよび -I オプションは無効となり
-               ます．
+     -I        ファイルやディレクトリ毎に問い合わせを行います．こ
+               のオプションは -i オプションを覆います．
+
+     -n        -v オプションと同じ報告をし，実際にはコピーしませ
+               ん．-f オプションによる削除も行いません．
 
      -p        ファイルや新規作成されるディレクトリに対して（もし
                あれば）属性とタイムスタンプもコピーします．-m オ
                プションによる修正はその属性に対して働くことになり
                ます．
+
+     -r        ディレクトリを再帰的にコピーします．
+
+     -R        ディレクトリ毎にコピーするかどうかを問い合わせます．
+               問い合わせに対して‘y’で始まる行を入力すると -r
+               オプション指定時と同様にコピーされ，それ以外の入力
+               ではコピーをとりやめて次のファイルやディレクトリの
+               処理に進みます．このオプションは -r オプションを覆
+               います．
 
      -s        ファイル（ディレクトリは除く）をコピーする代わりに，
                そのファイルを参照するシンボリック・リンクを作成し
@@ -209,6 +173,45 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
                -m オプションを複数指定した場合には，最後の指定の
                みが有効となります．
 
+     -P        たとえば cp -P a/b/c /d/e/f G:/h/i/j targetdir で
+               は，a/b/c を targetdir/a/b/c に，/d/e/f を
+               targetdir/d/e/f に，G:/h/i/j を targetdir/h/i/j に
+               コピーします．targetdir は存在するディレクトリでな
+               ければなりません（このオプションは第2の形式でのみ
+               サポートされます）．パス targetdir/a/b，
+               targetdir/d/e，targetdir/h/i は，存在しなければ作
+               成されます（ただしコピーするファイルが存在していな
+               ければ，パスの作成は行われません）．このパスの作成
+               処理は，どのオプションの影響も受けません．
+
+     -S        システム・ファイルをコピーしません．
+
+     -V        ボリューム・ラベルもコピーします．
+
+     -B        ファイルやディレクトリを元の名前でコピーする場合に，
+               コピー先の名前をMS-DOSのディレクトリに納まる長さ（
+               ピリオドまで8バイト以内，ピリオド以降 3バイト以内）
+               に切り詰めます．ピリオドを 2個以上含む名前やピリオ
+               ドで始まる名前のファイルやディレクトリはコピーせず
+               にエラーとします．
+
+     -C        ファイルやディレクトリを元の名前でコピーする場合に，
+               その名前がMS-DOSのディレクトリに納まらない場合，代
+               わりの名前を問い合わせます．このオプションは -B オ
+               プションを覆います．
+
+     -D        ファイルやディレクトリを元の名前でコピーする場合に，
+               MS-DOSのディレクトリに納まらない名前のファイルやディ
+               レクトリをコピーせず無視します．このオプションは
+               -B オプションと -C オプションを覆います．
+
+     -L        ファイルやディレクトリを元の名前でコピーする場合に，
+               小文字を含む名前のファイルやディレクトリをコピーし
+               ません．
+
+     -U        ファイルやディレクトリを元の名前でコピーする場合に，
+               コピー先の名前を大文字にします．
+
 関連事項
      ln(1), mv(1), rm(1), mkdir(1), chmod(1)
 
@@ -235,14 +238,14 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
      ディレクトリの再帰の回数は64回に制限されています．
 
 バージョン
-     2.5
+     2.6
 
 制作・著作
-     Copyright(C)1992-93 by 板垣 史彦 (Itagaki Fumihiko)
+     Copyright(C)1992-94 by 板垣 史彦 (Itagaki Fumihiko)
 
 
 
-2.5                 Last change: 03 Apr 1994     Itagaki Fumihiko
+2.6                 Last change:  8 May 1994     Itagaki Fumihiko
 
 
 
