--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 ※敬称は省略しています。
 
 
+* -T オプションを追加.（Thanks to Ｅｘｔ）
+
+* 2044年以降のファイルを-uオプションつきでコピーまたは-pオプションつきで上
+  書きコピーできないバグを修正.（Thanks to くまあるき）
+
+* オープンしていないファイルをクローズする場合があるバグ（実害はほとんど発
+  生しない）を修正.
+
 Version 2.6
 
 * 些細な変更.
