--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,14 @@
 ※敬称は省略しています。
 
 
+Version 2.8 (非公開)
+
+* -h オプションを追加.
+
+* -T オプションが効く条件を変更.
+
+Version 2.7
+
 * -T オプションを追加.（Thanks to Ｅｘｔ）
 
 * 2044年以降のファイルを-uオプションつきでコピーまたは-pオプションつきで上
