--- a/cp.1
+++ b/cp.1
@@ -9,9 +9,10 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
      cp - ファイルやディレクトリをコピーする
 
 形式
-     cp [ -IRSTVadefinprsuvx ] [ -m mode ] [ -- ] source dest
-     cp [ -BCDILPRSTUVadefinprsuvx ] [ -m mode ] [ -- ] source ...
-     targetdir
+     cp [ -IRSTVadefhinprsuvx ] [ -m mode ] [ -- ] source dest
+
+     cp [ -BCDILPRSTUVadefhinprsuvx ] [ -m mode ] [ -- ]
+          source ... targetdir
 
 解説
      cp はファイルやディレクトリをコピーします．ファイルからデバ
@@ -186,10 +187,17 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
 
      -S        システム・ファイルをコピーしません．
 
-     -T        作成したシステム・ファイルのFATが不連続となった場
-               合，コピーをやりなおすかどうかを問い合わせます．
-
      -V        ボリューム・ラベルもコピーします．
+
+     -h        システム・ファイルをコピーした後にそのFATを調べ，
+               不連続になっていれば，コピーをやりなおすかどうかを
+               問い合わせます．システム・ファイルのコピー先がルー
+               ト・ディレクトリの先頭32エントリ外に作られた場合に
+               はエラーとします．ディレクトリをコピーする際にはシ
+               ステム・ファイルを優先します．
+
+     -T        コピーしたファイルのFATが不連続となった場合，コピー
+               をやりなおすかどうかを問い合わせます．
 
      -B        ファイルやディレクトリを元の名前でコピーする場合に，
                コピー先の名前をMS-DOSのディレクトリに納まる長さ（
@@ -241,14 +249,14 @@ CP(1)          Human68k ITA TOOLBOX User's Manual           CP(1)
      ディレクトリの再帰の回数は64回に制限されています．
 
 バージョン
-     2.7
+     2.8
 
 制作・著作
      Copyright(C)1992-94 by 板垣 史彦 (Itagaki Fumihiko)
 
 
 
-2.7                 Last change:  2 Oct 1994     Itagaki Fumihiko
+2.8                 Last change:  8 Oct 1994     Itagaki Fumihiko
 
 
 
